--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" style="background-color: #e1e8ee;">
 
 
     <title>Corona Spy</title>
@@ -27,9 +27,8 @@
       </label>
     </div>
     <div class="nav-links">
-      <a  target="_blank">Home</a>
-      <a  target="_blank">Send SMS</a>
-      <a  target="_blank">Warnings</a>
+      <a  target="_blank" th:href="@{/}">Home</a>
+      <a  target="_blank" th:href="@{/report/}">Send SMS</a>
     </div>
 </div>
 
