--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -342,6 +342,25 @@ td.text-right {
   text-align: right;
 }
 
+input {
+  background: rgba(255,255,255,0.4);
+  border: none;
+  position: sticky;
+  display: block;
+  outline: none;
+  width: 400px;
+  height: 50px;
+  top: -10px;
+  margin: 0 auto;
+  padding: 10px;
+  color: #333;
+  -webkit-box-shadow: 0 2px 10px 1px rgba(0,0,0,0.5);
+  box-shadow: 0 2px 10px 1px rgba(0,0,0,0.5);
+}
+::-webkit-input-placeholder { color: #666;}
+:-moz-placeholder { color: #666; }
+::-moz-placeholder { color: #666; }
+:-ms-input-placeholder { color: #666; }
 
 footer {
   background-color: #333;
